WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
130270
Release-assert if someone starts the WebThread in the WebProcess
https://bugs.webkit.org/show_bug.cgi?id=130270
Summary
Release-assert if someone starts the WebThread in the WebProcess
Simon Fraser (smfr)
Reported
2014-03-14 16:36:31 PDT
Release-assert if someone starts the WebThread in the WebProcess
Attachments
Patch
(1.79 KB, patch)
2014-03-14 16:37 PDT
,
Simon Fraser (smfr)
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2014-03-14 16:37:58 PDT
Created
attachment 226774
[details]
Patch
Simon Fraser (smfr)
Comment 2
2014-03-14 16:45:20 PDT
http://trac.webkit.org/changeset/165662
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug