Release-assert if someone starts the WebThread in the WebProcess https://bugs.webkit.org/show_bug.cgi?id=130270 <rdar://problem/16332380>

Reviewed by Sam Weinig.

If someone tries to start the WebThread in the WebProcess, assert,
even in release builds, because this should never happen.

* platform/ios/wak/WebCoreThread.mm:
(WebThreadEnable):

Canonical link: https://commits.webkit.org/148251@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165662 268f45cc-cd09-0410-ab3c-d52691b4dbfc